--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,11 @@
 	<name>tasks-backend</name>
 	<packaging>jar</packaging>
 	<description>A very simple task management tool</description>
-    
+
 	<properties>
 		<java.version>1.8</java.version>
 		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
 		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-		<sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
 	</properties>
 
 	<dependencies>
@@ -32,7 +31,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -70,19 +69,23 @@
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+						        <goal>report</goal>
+						</goals>
+					</execution>
 				</executions>
-				<configuration>
-					<destFile>${sonar.jacoco.reportPath}</destFile>
-				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>3.0.0</version>
 				<configuration>
-				  <mainClass>br.ce.wcaquino.taskbackend.TaskBackendApplication</mainClass>
+					<mainClass>br.ce.wcaquino.taskbackend.TaskBackendApplication</mainClass>
 				</configuration>
-			  </plugin>
+			</plugin>
 		</plugins>
 	</build>
 
